[gd_scene load_steps=4 format=3 uid="uid://chd56i23loj2b"]

[ext_resource type="Script" path="res://Characters/draggable_character.gd" id="1_fpejv"]
[ext_resource type="Texture2D" uid="uid://coc1lp6u3t3t0" path="res://Assets/builderSpritesheet.png" id="2_tcukw"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xjy0l"]
radius = 14.0
height = 41.0

[node name="DraggableCharacter" type="Node2D"]
scale = Vector2(2.5, 2.5)
script = ExtResource("1_fpejv")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_tcukw")
region_enabled = true
region_rect = Rect2(2, 2, 26, 36)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CapsuleShape2D_xjy0l")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
